# myc-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.tr.md  README.zh.md  docs.html  fix_electron.js  fix_package.js  index.html  landing.html  run.bat  run.command  run.sh  translate_auto.py  translate_devices.py  translate_landing.py  translate_lib.py  translate_settings.py
ai-layer/: cli.py  main.py  main_v2.py  pyproject.toml  requirements.txt  walkthrough.md
ai-layer/.continue/: config.json
ai-layer/:memory:/: library.db
ai-layer/myca/: __init__.py  api.py  connection.py  crypto.py  database.py  discovery.py  library.py  node.py  orchestrator.py  policies.py  runtime.py  speculative.py  startup.py
ai-layer/myca/automation/: api.py  executor.py  history.py  mcp.py  planner.py  scheduler.py  templates.py  test_automation.py  trigger.py  workflow.py
ai-layer/myca/core/: config.py  need.py
ai-layer/myca/execution/: bus.py  capability.py  inference.py  memory.py
ai-layer/myca/experience/: memory.py
ai-layer/myca/flow/: layer.py  policies.py  scheduler.py
ai-layer/myca/inference/: engine.py  legacy.py  manager.py  registry.py  test_inference.py
ai-layer/myca/intent/: engine.py
ai-layer/myca/planner/: capability_graph.py  execution_graph.py  planner.py
ai-layer/myca/recovery/: dom_recovery.py
ai-layer/myca/skills/: test_os_sdk.py  test_sdk.py
ai-layer/myca/testing/: colony.py  harness.py  metrics.py  reporter.py  runner.py  simulator.py
landing/: docs.html  (+1 more)
runtime/: Cargo.toml
runtime/src/: discovery.rs  flow.rs  identity.rs  main.rs
(+102 files in other folders)
