[project]
name = "ai-layer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "uvicorn>=0.51.0",
    "pypdf>=4.0.0",
    "aiofiles>=23.0.0",
    "aiosqlite>=0.20.0",
    "faster-whisper>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=40.0.0",
    "python-multipart>=0.0.9",
    "websockets>=16.1",
    "sentence-transformers>=5.6.0",
    "numpy>=2.5.1",
    "llama-cpp-python>=0.3.34",
]
