[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
ed25519-dalek = { version = "3.0.0", features = ["rand_core"] }
env_logger = "0.11.11"
hex = "0.4.3"
log = "0.4.33"
mdns-sd = "0.20.1"
quinn = "0.11.11"
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
